# KyberFrog

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  README.md  TODO.md  WEB-UI-REDESIGN.md  design-prompt.md  mkdocs.yml
client/: Cargo.toml  README.md  build.rs
client/install/: install-client-agent.ps1  install-scene-agent.ps1
client/src/: config.rs  main.rs  supervisor.rs  web.rs
client/src/tray/: mod.rs  stub.rs  windows.rs
client/src/web/: index.html
director/: Cargo.toml
director/src/: config.rs  main.rs  spout.rs  supervisor.rs  web.rs
director/src/tray/: mod.rs  stub.rs  windows.rs
director/src/web/: index.html
docs/: E2E-spout-output.md  index.md
docs/dev/: architecture.md  building.md  contributing.md  index.md  releasing.md
docs/user/: faq.md  getting-started.md  index.md  installation.md  troubleshooting.md
examples/: kyberfrog.toml  transmitters.toml
kyberfrog/: Cargo.toml  build.rs
kyberfrog/install/: install-kyberfrog.ps1
kyberfrog/src/: app.rs  main.rs  spout.rs  supervisor.rs  web.rs
kyberfrog/src/tray/: mod.rs  stub.rs  windows.rs
kyberfrog/src/web/: index.html
packaging/: build-installer.sh  versions.sh
packaging/windows/: INSTALL.md  kyberfrog.nsi
scene-agent/: Cargo.toml  README.md
scene-agent/install/: install-scene-agent.ps1
scene-agent/src/: config.rs  main.rs
server/: Cargo.toml  build.rs
server/src/: config.rs  main.rs  spout.rs  supervisor.rs  web.rs
server/src/tray/: mod.rs  stub.rs  windows.rs
server/src/web/: index.html
shared/: Cargo.toml
shared/src/: config.rs  gen.rs  lib.rs  paths.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  global.css  icons.tsx  main.tsx  types.ts
ui/src/components/: AboutModal.tsx  AddTransmitterDrawer.tsx  ConfirmDialog.tsx  EmptyState.tsx  LogDrawer.tsx  TopBar.tsx  TransmitterCard.tsx  ViewerCard.tsx  ViewerFormDrawer.tsx
ui/src/hooks/: useLang.ts  useLogs.ts  useSpoutSenders.ts  useStatus.ts  useTheme.ts
