# KyberFrog 🐸 — transmit any Windows source to Kyber clients.
#
# One app, installed on every machine: it turns a single Kyber install into N
# independent transmitters (one kycontroller per source: Spout, screen, …) and
# supervises the viewers (one kyclient each). See README.md.

[workspace]
resolver = "2"
members = [
    "shared",
    "kyberfrog",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
log = "0.4"
