# KyberFrog 🐸 — transmit any Windows source to Kyber clients.
#
# One app, installed on every machine: it turns a single Kyber install into N
# independent transmitters (one kycontroller per source: Spout, screen, …) and
# supervises the viewers (one kyclient each). See README.md.

[workspace]
resolver = "2"
members = [
    "shared",
    "kyberfrog",
]

[workspace.package]
# Fallback only. The real version is the git tag, injected at build time via
# KYBERFROG_VERSION (see kyberfrog/build.rs); no need to bump this per release.
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
log = "0.4"
