[package]
name = "kyberfrog-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kyberfrog-client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", package = "kyberfrog-shared" }

serde.workspace = true
toml.workspace = true
log.workspace = true

anyhow = "1"
flexi_logger = "0.29"
axum = "0.7"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "net",
    "sync",
    "time",
    "signal",
] }
