[package]
name = "kyber-anysource-director"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kyber-anysource-director"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", package = "kyber-anysource-shared" }

serde.workspace = true
toml.workspace = true
thiserror.workspace = true
log.workspace = true

anyhow = "1"
env_logger = "0.11"
axum = "0.7"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "net",
    "sync",
    "time",
    "signal",
] }

[target.'cfg(windows)'.dependencies]
muda = "0.15"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
