[package]
name = "kyber-anysource-scene-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kyber-anysource-scene-agent"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared", package = "kyber-anysource-shared" }

serde.workspace = true
toml.workspace = true
log.workspace = true

anyhow = "1"
env_logger = "0.11"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "time",
    "signal",
] }
