[package]
name = "kyberfrog-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
